# AutoRecon

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  UPGRADE.md  UPGRADE_PLAN.md  config.example.py  config.py  docker-compose.yml  mypy.ini  py.typed  pyproject.toml  pytest.ini  recon.bat  recon.py  recon_v3.py  requirements-dev.txt  requirements.txt  utils.py
core/: __init__.py  adaptive_concurrency.py  async_engine.py  base.py  cdn_signatures.py  dns.py  http.py  logger.py  pdf_report.py  persistent_cache.py  plugin_system.py  report.py  scanner.py  utils.py
data/: __init__.py  fingerprints.py  wordlists.py
docs/: DEPLOYMENT_CHECK_REPORT.md  EVALUATION_REPORT.md  FULL_PROJECT_EVALUATION.md  SECURITY_BEST_PRACTICES.md  SQLMAP_INTEGRATION.md  STRESS_TEST.md  STRESS_TEST_DEEP_CHECK.md  STRESS_TEST_ENHANCEMENT.md  VERIFICATION_REPORT_V32.md
modules/: __init__.py  async_subdomain.py  cdn_detector.py  dir_scanner.py  external_tools.py  fingerprint.py  github_leaks.py  js_analyzer.py  port_scanner.py  sensitive.py  sqli_scanner.py  sqlmap_integration.py  ssl_certificate.py  stress_advanced.py  stress_modes.py  stress_realtime.py  stress_scenario.py  stress_test.py  subdomain.py  takeover.py  vuln_scanner.py  waf_bypass.py  whois_query.py
tests/: __init__.py  code_quality_check.py  test_async_engine.py  test_core.py  test_input_validation.py  test_security_fixes.py  test_ssrf_protection.py  test_web_api.py
web/: app.py  requirements.txt  run.py
web/static/css/: style.css
web/static/js/: app.js
web/static/js/modules/: history.js  log.js  reports.js  scanner.js  stress.js  ui.js  websocket.js
web/templates/: index.html
